more bugfixes for service install scripts, plus updates to java command to run KVS Edge agent based on latest release